--- a/index.Rmd
+++ b/index.Rmd
@@ -95,9 +95,9 @@ games
 Based on this data, I created three visualizations:
 
 ```{r wins-plot, echo=FALSE, fig.path="images/"}
-wins_barplot
-points_barplot
-ft_barplot
+print(wins_barplot)
+print(points_barplot)
+print(ft_barplot)
 ```
 
 
