--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -21,7 +21,7 @@ games <- games_raw |>
   filter(SEASON %in% c(2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
                        2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018))
 
-# wins long
+# wins regression
 
 wins_long <- games |>
   slice(rep(1:n(), each = 2)) |>
@@ -33,6 +33,31 @@ wins_long <- games |>
 
 wins_fit <- lm(Win ~ Home, data = wins_long)
 glance(wins_fit)
+
+# wins bar chart 
+
+wins_table <- data.frame(
+  Team = c("Visiting Team", "Home Team"),
+  WinRate = c(0.40571, 0.59428)
+)
+
+wins_barchart <- ggplot(wins_table, aes(x = "", y = WinRate, fill = Team)) +
+  geom_bar(stat = "identity") +
+  labs(title = "NBA win rates from 2004-2019",
+       y = "Win rate") +
+  scale_fill_manual(values = c("Home Team" = "#3498db", "Visiting Team" = "#e74c3c")) +
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
+  theme_minimal() +
+  theme(axis.title.x = element_blank(), axis.title.y = element_blank(), 
+        axis.text.x = element_blank(), axis.ticks.x = element_blank(), 
+        legend.position = "none") + 
+  annotate("text", x = 1, y = max(wins_table$WinRate) * 1.15, 
+           label = "Home team win rate = 59.428%", color = "#000000") +
+  annotate("text", x = 1, y = max(wins_table$WinRate) * 0.3,
+           label = "Visiting team win rate = 40.571%", color = "#000000")
+
+save(wins_barchart, file = "wins_barchart.RData")
+
 
 #pts regression
 
@@ -71,9 +96,5 @@ pts_boxplot <- ggplot(pts_long,
   coord_cartesian(ylim = c(0, max(pts_long$PTS) * 1.2)) 
 
 save(pts_boxplot, file = "pts_boxplot.RData")
-
-# home team win average
-
-home_team_win_average <- mean(games$HOME_TEAM_WINS, na.rm = TRUE)
 
 ```
