--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -34,16 +34,26 @@ wins_long <- games |>
 wins_fit <- lm(Win ~ Home, data = wins_long)
 glance(wins_fit)
 
+wins_table <- data.frame(
+  Intercept = c("40.57%"),
+  Home = c("+18.86%"),
+  P_value = c("0.00")
+)
+
+wins_table <- knitr::kable(wins_table, col.names = c("Visiting team win rate", "Home team win rate advantage", "P-value"), digits = 2)
+
+save(wins_table, file = "wins_table.RData")
+
 # wins bar chart 
 
-wins_table <- data.frame(
+wins_table_1 <- data.frame(
   Team = c("Visiting Team", "Home Team"),
   WinRate = c(0.40571, 0.59428)
 )
 
-wins_barchart <- ggplot(wins_table, aes(x = "", y = WinRate, fill = Team)) +
+wins_barchart <- ggplot(wins_table_1, aes(x = "", y = WinRate, fill = Team)) +
   geom_bar(stat = "identity") +
-  labs(title = "NBA win rates from 2004-2019",
+  labs(title = "Win rates in the NBA, 2004-2019",
        y = "Win rate") +
   scale_fill_manual(values = c("Home Team" = "#3498db", "Visiting Team" = "#e74c3c")) +
   scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
@@ -51,10 +61,10 @@ wins_barchart <- ggplot(wins_table, aes(x = "", y = WinRate, fill = Team)) +
   theme(axis.title.x = element_blank(), axis.title.y = element_blank(), 
         axis.text.x = element_blank(), axis.ticks.x = element_blank(), 
         legend.position = "none") + 
-  annotate("text", x = 1, y = max(wins_table$WinRate) * 1.15, 
-           label = "Home team win rate = 59.428%", color = "#000000") +
-  annotate("text", x = 1, y = max(wins_table$WinRate) * 0.3,
-           label = "Visiting team win rate = 40.571%", color = "#000000")
+  annotate("text", x = 1, y = max(wins_table_1$WinRate) * 1.15, 
+           label = "Home team win rate = 59.43%", color = "#000000") +
+  annotate("text", x = 1, y = max(wins_table_1$WinRate) * 0.3,
+           label = "Visiting team win rate = 40.57%", color = "#000000")
 
 save(wins_barchart, file = "wins_barchart.RData")
 
@@ -75,25 +85,29 @@ pts_fit <- lm(PTS ~ Home, data = pts_long)
 glance(pts_fit)
 
 pts_table <- data.frame(
-  Intercept = c("98.693"),
-  Home = c("+3.014"),
-  P_value = c("1.11e-135")
+  Intercept = c("98.69"),
+  Home = c("+3.01"),
+  P_value = c("0.00")
 )
 
-pts_table_formatted <- knitr::kable(pts_table, col.names = c("Average visiting team points", "Average home court points advantage", "P-value"))
+pts_table <- knitr::kable(pts_table, col.names = c("Average visiting team points", "Average home court points advantage", "P-value"))
 
-save(pts_table_formatted, file = "pts_table_formatted.RData")
+save(pts_table, file = "pts_table.RData")
 
 #box plot
 
 pts_boxplot <- ggplot(pts_long, 
-                        aes(x = factor(Home, labels = c("Visiting team", "Home team")), y = PTS)) +
+                      aes(x = factor(Home, 
+                                     labels = c("Visiting team", "Home team")), 
+                          y = PTS, fill = factor(Home))) +
   geom_boxplot(width = 0.5, position = position_dodge(width = 0.8)) +
-  stat_summary(fun = "mean", geom = "text", aes(label = sprintf("%.3f", after_stat(y))),
+  scale_fill_manual(values = c("Visiting team" = "#e74c3c", "Home team" = "#3498db")) +
+  stat_summary(fun = "mean", geom = "text", aes(label = sprintf("%.2f", after_stat(y))),
                position = position_dodge(width = 0.8), vjust = -0.5, size = 3) +
   labs(x = "", y = "Points scored") + 
   ggtitle("Home court points advantage in the NBA, 2004-2019") +
-  coord_cartesian(ylim = c(0, max(pts_long$PTS) * 1.2)) 
+  coord_cartesian(ylim = c(0, max(pts_long$PTS) * 1.2)) +
+  theme_minimal()
 
 save(pts_boxplot, file = "pts_boxplot.RData")
 
