--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -40,7 +40,7 @@ wins_table <- data.frame(
   P_value = c("0.00")
 )
 
-wins_table <- knitr::kable(wins_table, col.names = c("Visiting team win rate", "Home team win rate advantage", "P-value"), digits = 2)
+wins_table <- knitr::kable(wins_table, col.names = c("Visiting team win rate (intercept)", "Home team win rate advantage (coefficient)", "P-value"), digits = 2)
 
 save(wins_table, file = "wins_table.RData")
 
@@ -90,7 +90,7 @@ pts_table <- data.frame(
   P_value = c("0.00")
 )
 
-pts_table <- knitr::kable(pts_table, col.names = c("Average visiting team points", "Average home court points advantage", "P-value"))
+pts_table <- knitr::kable(pts_table, col.names = c("Average visiting team points (intercept)", "Average home court points advantage (coefficient)", "P-value"))
 
 save(pts_table, file = "pts_table.RData")
 
