--- a/graphs.Rmd
+++ b/graphs.Rmd
@@ -14,6 +14,7 @@ library(tidyverse)
 library(dplyr)
 library(ggplot2)
 library(broom)
+library(lubridate)
 
 games_raw <- read_csv("games.csv")
 
@@ -26,10 +27,12 @@ games <- games_raw |>
 wins_long <- games |>
   slice(rep(1:n(), each = 2)) |>
   mutate(
+    Season = SEASON,
+    playoffs = playoffs,
     Home = rep(c(0, 1), times = n()/2),
     Win = ifelse((Home == 1 & HOME_TEAM_WINS == 1) | (Home == 0 & HOME_TEAM_WINS == 0), 1, 0)
   ) |>
-  select(Home, Win)
+  select(Home, playoffs, Season, Win)
 
 wins_fit <- lm(Win ~ Home, data = wins_long)
 glance(wins_fit)
@@ -44,18 +47,9 @@ wins_table <- knitr::kable(wins_table, col.names = c("Visiting team win rate (in
 
 save(wins_table, file = "wins_table.RData")
 
-# confounder -- years?
+# wins multiple regression season
 
-wins_long_season <- games |>
-  slice(rep(1:n(), each = 2)) |>
-  mutate(
-    Season = SEASON,
-    Home = rep(c(0, 1), times = n()/2),
-    Win = ifelse((Home == 1 & HOME_TEAM_WINS == 1) | (Home == 0 & HOME_TEAM_WINS == 0), 1, 0)
-  ) |>
-  select(Home, Season, Win)
-
-wins_multiple_fit <- lm(Win ~ Home + Season, data = wins_long_season)
+wins_season_fit <- lm(Win ~ Home + Season, data = wins_long)
 
 # wins bar chart 
 
@@ -85,10 +79,10 @@ save(wins_barchart, file = "wins_barchart.RData")
 #pts regression
 
 pts_long <- games |>
-  select(PTS_home, PTS_away) |>
+  select(SEASON, playoffs, PTS_home, PTS_away) |> 
   na.omit() |>
   pivot_longer(
-    cols = everything(),
+    cols = c(PTS_home, PTS_away), 
     names_to = "Home",
     values_to = "PTS"
   ) |>
@@ -107,19 +101,9 @@ pts_table <- knitr::kable(pts_table, col.names = c("Average visiting team points
 
 save(pts_table, file = "pts_table.RData")
 
-# pts season
+# pts multiple regression season
 
-pts_long_season <- games |>
-  select(SEASON, PTS_home, PTS_away) |> 
-  na.omit() |>
-  pivot_longer(
-    cols = c(PTS_home, PTS_away), 
-    names_to = "Home",
-    values_to = "PTS"
-  ) |>
-  mutate(Home = as.integer(Home == "PTS_home"))
-
-pts_multiple_fit <- lm(PTS ~ Home + SEASON, data = pts_long_season)
+pts_season_fit <- lm(PTS ~ Home + SEASON, data = pts_long)
 
 #box plot
 
@@ -137,5 +121,53 @@ pts_boxplot <- ggplot(pts_long,
   theme_minimal()
 
 save(pts_boxplot, file = "pts_boxplot.RData")
+
+# adding playoffs variable
+
+games <- games %>%
+  mutate(MMDD = as.numeric(format(ymd(GAME_DATE_EST), "%m%d")))
+
+games <- games |>
+  mutate(playoffs = case_when(
+    SEASON == 2003 & MMDD >= 417 & MMDD <= 615 ~ 1,
+    SEASON == 2004 & MMDD >= 423 & MMDD <= 623 ~ 1,
+    SEASON == 2005 & MMDD >= 422 & MMDD <= 620 ~ 1,
+    SEASON == 2006 & MMDD >= 421 & MMDD <= 614 ~ 1,
+    SEASON == 2007 & MMDD >= 419 & MMDD <= 617 ~ 1,
+    SEASON == 2008 & MMDD >= 418 & MMDD <= 614 ~ 1,
+    SEASON == 2009 & MMDD >= 417 & MMDD <= 617 ~ 1,
+    SEASON == 2010 & MMDD >= 416 & MMDD <= 612 ~ 1,
+    SEASON == 2011 & MMDD >= 428 & MMDD <= 620 ~ 1,
+    SEASON == 2012 & MMDD >= 420 & MMDD <= 620 ~ 1,
+    SEASON == 2013 & MMDD >= 419 & MMDD <= 615 ~ 1,
+    SEASON == 2014 & MMDD >= 418 & MMDD <= 616 ~ 1,
+    SEASON == 2015 & MMDD >= 416 & MMDD <= 619 ~ 1,
+    SEASON == 2016 & MMDD >= 415 & MMDD <= 612 ~ 1,
+    SEASON == 2017 & MMDD >= 414 & MMDD <= 608 ~ 1,
+    SEASON == 2018 & MMDD >= 413 & MMDD <= 613 ~ 1,
+    TRUE ~ 0  
+  ))
+
+# multiple regressions: playoffs
+
+wins_playoffs_fit <- lm(Win ~ Home + playoffs, data = wins_long)
+
+pts_playoffs_fit <- lm(PTS ~ Home + playoffs, data = pts_long)
+
+# section 1 graphs
+
+ggplot(games, aes(x = factor(HOME_TEAM_WINS))) +
+  geom_bar(stat = "count") +
+  labs(x = "HOME_TEAM_WINS", y = "Count") +
+  scale_x_discrete(labels = c("Loss (0)", "Win (1)"))
+
+ggplot(games, aes(x = factor(HOME_TEAM_WINS))) +
+  geom_bar(aes(fill = factor(HOME_TEAM_WINS)), stat = "count") +
+  labs(y = "Count") +
+  scale_x_discrete(labels = c("Visiting Team Won", "Home Team Won")) +
+  geom_text(stat = "count", aes(label = ..count..), vjust = -0.5) +
+  theme_minimal() +
+  theme(axis.title.x = element_blank(), legend.position = "none") + 
+  scale_fill_manual(values = c("0" = "#e74c3c", "1" = "#3498db"))
 
 ```
