--- a/code.Rmd
+++ b/code.Rmd
@@ -8,6 +8,7 @@ date: "2023-10-20"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Loading packages and limiting my data to 2003-2019
 
 ```{r}
 library(tidyverse)
@@ -21,6 +22,33 @@ games_raw <- read_csv("games.csv")
 games <- games_raw |>
   filter(SEASON %in% c(2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
                        2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018))
+```
+
+Introduction graphs
+
+```{r}
+
+wins_barchart_1 <- ggplot(games, aes(x = factor(HOME_TEAM_WINS))) +
+  geom_bar(aes(fill = factor(HOME_TEAM_WINS)), stat = "count") +
+  labs(y = "Count") +
+  scale_x_discrete(labels = c("Visiting Team Won", "Home Team Won")) +
+  geom_text(stat = "count", aes(label = ..count..), vjust = -0.5) +
+  theme_minimal() +
+  theme(axis.title.x = element_blank(), legend.position = "none") + 
+  scale_fill_manual(values = c("0" = "#e74c3c", "1" = "#3498db"))
+
+save(wins_barchart_1, file = "wins_barchart_1.RData")
+
+pts_linechart <- ggplot(na.omit(games[c("PTS_away", "PTS_home")]), aes(x = PTS_away)) +
+  geom_density(aes(fill = "PTS_away"), alpha = 0.5) + 
+  geom_density(aes(x = PTS_home, fill = "PTS_home"), alpha = 0.5) +  
+  labs(x = "Points", y = "Density") +
+  scale_fill_manual(values = c("PTS_away" = "#e74c3c", "PTS_home" = "#3498db"), 
+                    labels = c("Points scored by visiting teams", "Points scored by home teams")) +
+  theme_minimal() +
+  guides(fill = guide_legend(title = NULL))
+
+save(pts_linechart, file = "pts_linechart.RData")
 
 # wins regression
 
@@ -153,25 +181,4 @@ games <- games |>
 wins_playoffs_fit <- lm(Win ~ Home + playoffs, data = wins_long)
 
 pts_playoffs_fit <- lm(PTS ~ Home + playoffs, data = pts_long)
-
-# section 1 graphs
-
-ggplot(games, aes(x = factor(HOME_TEAM_WINS))) +
-  geom_bar(aes(fill = factor(HOME_TEAM_WINS)), stat = "count") +
-  labs(y = "Count") +
-  scale_x_discrete(labels = c("Visiting Team Won", "Home Team Won")) +
-  geom_text(stat = "count", aes(label = ..count..), vjust = -0.5) +
-  theme_minimal() +
-  theme(axis.title.x = element_blank(), legend.position = "none") + 
-  scale_fill_manual(values = c("0" = "#e74c3c", "1" = "#3498db"))
-
-
-ggplot(na.omit(games[c("PTS_away", "PTS_home")]), aes(x = PTS_away)) +
-  geom_density(aes(fill = "PTS_away"), alpha = 0.5) + 
-  geom_density(aes(x = PTS_home, fill = "PTS_home"), alpha = 0.5) +  
-  labs(x = "Points", y = "Density") +
-  scale_fill_manual(values = c("PTS_away" = "#e74c3c", "PTS_home" = "#3498db"), 
-                    labels = c("Points scored by visiting teams", "Points scored by home teams")) +
-  theme_minimal() +
-  guides(fill = guide_legend(title = NULL))
 ```
