--- a/index.Rmd
+++ b/index.Rmd
@@ -7,77 +7,81 @@ output:
     self_contained: false
 ---
 
-Milestone 1:
-
-I am interested in exploring data related to political science, economics, and sports. I have a lot of ideas related to sports. I might look into the home court advantage in professional sports; this is my favorite idea. I could also look into salary caps in the NBA: how does the distribution of player salaries within a team affect its performance in the NBA? Another idea -- what is the short-term and long-term economic impact on cities that host major sports events, like the Olympics or the FIFA World Cup? 
-
-Milestone 2:
-
-In most professional sports, teams win more often when they play games at home as opposed to away (Moskowitz & Wertheim 2012). In this study, I examine the home court advantage in National Basketball Association games. I hypothesize that (1) the home team wins games more often than the visiting team and (2) hometown crowds are a major cause of this advantage. Most of the fans in the crowd support the hometown team and will cheer for that team; the crowd noise could potentially motivate home team players and discourage the visiting team. Furthermore, the fans will respond negatively to fouls called against the hometeam, and positively to fouls called against the visiting team; the social pressure from this crowd noise could influence the referees to call fewer fouls on the home team and more on the visiting team (Nevill et al. 2002). My sample is NBA games played from 2004 to 2019. I am not looking at the 2020-21 season because of the complicated impacts of COVID-19 and the NBA bubble. I am using data from NBA Stats (the League’s official platform) that was scraped by data scientist Nathan Lauga (Kaggle, NBA Stats). My explanatory variable of interest is whether a team is playing at home or away. For each game, there is one team in each of these categories. I will use the outcome variable of the final score (measured in points scored by each team) to test the first hypothesis of whether the home team won games more often than the visiting team. If the home team won games at a significantly higher rate than the visiting team, this will provide support for my hypothesis; if the win rate is similar (or the visiting team won more games), this would provide evidence against my hypothesis. I will use two outcome variables to test the second hypothesis about the impact of the crowd on the home court advantage. First, I will compare the free throw percentages of the home vs. the visiting team as an indicator of the impact of the crowd on player performance. If the home team scored significantly more free throws on average compared to the visiting team, this would suggest that the crowd noise could be impacting free throw shooting to the advantage of the home team. If there was no difference between the home and the visiting team’s free throw rates, or if the visiting team made more free throws on average, then this would provide evidence against my hypothesis. Second, I will compare the number of personal fouls called on the home vs. the visiting team as an indicator of the impact of the crowd on refereeing. If the referees called significantly more personal fouls on the visiting team as opposed to the home team, this would suggest that the crowd noise could be leading the referees to officiate more favorably toward the home team. If there was no difference between the amount of fouls called on the home vs. visiting team, or more were called on the home team, then this would provide evidence against my hypothesis.  
-
-Sources:
-https://www.amazon.com/Scorecasting-Hidden-Influences-Behind-Sports/dp/0307591808
-https://www.sciencedirect.com/science/article/abs/pii/S1469029201000334
-https://www.kaggle.com/datasets/nathanlauga/nba-games
-
-Milestone 3:
-
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
 
 games <- read_csv("games.csv")
-fouls <- read_csv("games_details.csv")
 ```
 
-Here's my data set, which includes statistics on final scores and free throw percentages. 
+# Introduction
+
+In most professional sports, teams win more often when they play games at home as opposed to away (Moskowitz & Wertheim, 2012, p. 111). Sports analysts have attributed this phenomenon, known as the home court advantage, to a variety of factors — including the impact of hometown crowds on both gameplay and refereeing (i.e., resulting in refereeing biases toward the home team), tiring scheduling and travel for the visiting team, and unique arena characteristics that the home team is comfortable with (Moskowitz & Wertheim, 2012, p. 116-167). In this project, I attempted to quantify the home court advantage in National Basketball Association games using NBA Stats data from 2003-2019 (Lauga, 2022). 
+
+I hypothesized that home teams in the NBA (from 2003-2019) (1) won more games and (2) scored more points than visiting teams. My explanatory variable was whether a team is playing at home or away (which is binary). For each game, there is one team in each of these categories. I looked at two outcome variables to interrogate the two (related) parts of my hypothesis. First, I looked at whether or not a team won (which is binary). Second, I looked at how many points a team scored. These variables are related because whichever team scored the greater number of points wins the game. However, it was useful to look at both in order to quantify (1) how much more often the home vs. away team won and (2) how many more points the home vs. away team scored on average.
+
+If the home team won games at a significantly higher rate than the visiting team, this would provide support for my hypothesis; if the win rate was similar (or the visiting team won more games), this would provide evidence against my hypothesis. If the home team scored significantly more points on average compared to the visiting team, this would provide support for my hypothesis; if their average scores were similar (or the visiting team scored more points on average), this would provide evidence against my hypothesis.
+
+# Data
+
+I used data scraped by data scientist Nathan Lauga from NBA Stats (the League’s official statistics platform) (Lauga, 2022). The data begins with the 2003-2004 season and ends with the 2021-2022 season. I decided to look at the portion of data from before the pandemic (up until the 2018-2019 season) in order to avoid potentially distortionary impacts of COVID-19 on the League. The data has one observation per game and basic statistics about each game, such as the number of points, rebounds, assists, etc. scored by each team. My wins outcome variable is coded as the binary variable HOME_TEAM_WINS; it is set to 1 if the home team won, and 0 if the visiting team won. Here is a plot that summarizes the HOME_TEAM_WINS outcome variable and shows that home teams won more frequently than visiting teams from 2003-2019:
 
 ```{r, echo=FALSE}
-games
+load("wins_barchart_1.RData")
+wins_barchart_1
 ```
 
-Based on this data, I created three visualizations:
+My outcome variable, points, is coded as two scalar variables: PTS_away (points scored by the visiting team) and PTS_home (points scored by the home team). Here is a plot that summarizes PTS_away and PTS_home and shows that NBA home teams scored slightly more points than visiting teams from 2003-2019:
 
 ```{r, echo=FALSE}
-load("wins_barplot.RData")
-wins_barplot
-load("points_barplot.RData")
-points_barplot
-load("ft_barplot.RData")
-ft_barplot
+load("pts_linechart.RData")
+pts_linechart
 ```
 
-Milestone 4:
+My explanatory variable — whether a team played at home — is not explicitly set in the original data, as it is formatted as one observation for each game with statistics about both teams. However, the statistics (HOME_TEAM_WINS, PTS_away, and PTS_home) are specified to the home and visiting team. Therefore, I used the pivot_longer function to make each observation into two observations, one for each team (with both the explanatory and outcome variables). For wins, I used pivot_longer to create a table with a variable called Win (which equalled 1 if a team won the game, and 0 if they lost, based on the HOME_TEAM_WINS statistic) and another called Home (which equalled 1 if the relevant team was a home team, and 0 if they were a visiting team, also extrapolated from the HOME_TEAM_WINS statistic). For points, I used pivot_longer to create a table with a variable called PTS (which equalled the number of points a team scored in a game, based on PTS_away and PTS_home) and another called Home (which equalled 1 if the relevant team was a home team, and 0 if they were a visiting team, also extrapolated from PTS_away and PTS_home). My research design is cross-sectional — it compares outcomes treated and control units at one point in time; i.e., it compares points scored and games by home vs. visiting teams.
+Later in this project, in the Results section, I discuss two more variables (Season and Playoffs) as potential confounders. I also added these variables to each of my long tables. I directly pulled Season from the SEASON variable (formatted in YYYY) in the original data. For Playoffs, in the original data, I used the mutate function to create a new variable called MMDD that converted GAME_DATE_EST (what day the game took place, in YYYY-MM-DD format) to an integer with just the month and date (i.e., 2006-05-03 would become 503). Then, based on the Season and MMDD variables, and the historical Playoffs schedules, I created a new variable which equaled 1 if the game was a playoff game and 0 if it was not. I incorporated this variable into my long tables.
 
-From 2014-2022 in the NBA, home teams won 58.70% of the time. I ran a univariate regression with whether a team was playing at home (1 if they were the home team, 0 if they were the visiting team) as my independent variable and their score as the dependent variable. Here are the results:
+# Results
+
+### Regression #1: Wins
+
+My first regression was univariate and related the explanatory variable of whether a team was playing at home to the outcome variable of whether a team won. Importantly, my explanatory variable was binary: it equaled 1 if the team was playing at home, and 0 if they were visiting. Therefore, the outcome variables were grouped into two potential categories and the regression separated the two outcome means. For this first regression, the outcome variable was also binary: 1 if the team won, and 0 if it lost. As a result of the binary explanatory variable, the intercept of the regression was the average visiting team win rate and the coefficient was the difference in means between the average visiting and home team win rates. Here are the regression results in table form, and the visualized averages:
 
 ```{r, echo=FALSE}
-load("pts_table_formatted.RData")
-pts_table_formatted
+
 ```
 
-According to the model, the home team enjoyed an average of a 2.82 point advantage from 2014-2022, which is significant at p < 0.05 (p = 1.39e-129, a very tiny number, so the results are very significant). Therefore, the home court advantage clearly exists, with the home team having a moderate but significant points advantage over the visiting team.
+According to the model, NBA home teams won 18.86% more than visiting teams from 2003-2019. Visiting teams won 40.57% of the time and home teams won 59.43% of the time. These results are significant at p < 0.05 and p < 0.01. The p-value was so small that R rounded it to zero. This means that if the null hypothesis is true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. In other words, the relationship between whether a team plays at home or away and whether they win is very strong.
 
-I also ran a regression with with whether a team was playing at home (1 if they were the home team, 0 if they were the visiting team) as my independent variable and their free throw rate as the dependent variable. Here are the results:
+### Regression #2: Points
+
+My second regression was also univariate and related the explanatory variable of whether a team was playing at home to the outcome variable of how many points a team scored. Unlike in my first regression, my explanatory variable was scalar, but because the explanatory variable was still binary, as in the first regression, the outcome variables were grouped into two potential categories and the regression separated the two outcome means. Therefore, as a result of the binary explanatory variable, the intercept of the regression was the average number of points scored by the visiting team and the coefficient was the difference in means between the average number of points scored by the visiting and home teams. Here are the regression results in table form, and the visualized averages:
 
 ```{r, echo=FALSE}
-load("ft_table_formatted.RData")
-ft_table_formatted
+
 ```
 
-According to the model, the home team scored 0.16% more free throws than the visiting team on average from 2014-2022. This is a small advantage and the p-value is 0.078, which is not significant at p < 0.05. This means that if the null hypothesis is true, you would still expect to see the relationship observed about 7.8% of the time purely due to random chance. Therefore, there is a small, weak relationship between whether a team is playing at home and their free throw rate (or maybe none at all).
+According to the model, NBA home teams scored an average of 3.01 more points than visiting teams from 2003-2019. Visiting teams scored an average of 98.69 points and home teams scored an average of 101.71 points. These results are significant at p < 0.05 and p < 0.01. The p-value is extremely small: 1.11e-135. This means that if the null hypothesis is true, you would still expect to see the relationship observed nearly 0% of the time purely due to random chance. Therefore, the relationship between whether a team plays at home or away and how much they scored is very strong.
 
-Free throw percentages are the most direct way to measure the impact of the crowd on the players (even though it probably impacts many parts of game play) because they are consistently the same shot and the only difference between playing at home vs. away is whether the crowd is cheering vs. booing. I interpret the result of my model as an indicator that pressure from the home crowd directly on the players is not a major factor in home court advantage -- although again, it could impact other parts of game play in different ways.
+### Potential confounders
 
+The regressions show a highly statistically significant, positive relationship between NBA teams playing at home and winning more/scoring more points (from 2003-2019). When determining causality, it is crucial to evaluate the study design and identify potential confounders. Cross-sectional designs assume that groups are identical on average. In the NBA regular season, every team plays 41 games at home and 41 games away, so each team appears in the treated and control groups at the same frequently. Therefore, many potential confounders such as team strength are ruled out. 
 
+However, this data set also includes playoff games — which are more complicated. In the playoffs, teams play best of seven. The higher-seeded (and likely stronger) team hosts the first, second, fifth, and seventh game, and the lower-seeded (and likely weaker) team hosts the third, fourth, and sixth game. As a result, the stronger team often plays more games at home. Both teams play the same number of games at home and away if the series goes to four or six games; but if it goes to five or seven games, the higher-seeded teams play more at home. Therefore, higher-seeded/stronger teams disproportionately play at home during the playoffs and lower-seeded/relatively weaker teams disproportionately play away during the playoffs, which could present a possible confounder. Furthermore, regardless of how many games are played at home, the higher-seeded teams play their games earlier in the series — when they could possibly be less tired or less likely to have injured players. This could further bolster the advantage of home teams (on average) during the playoffs.
 
+To evaluate this concern, I ran a bivariate regression and considered the variable Playoffs (described in the Data section) along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this confounder had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering whether a game was a playoff or regular season game.
 
+Another potential confounder I looked at was when the game was played. The league has made several changes to game play in recent years — such as introducing the Coach’s Challenge in 2019 — that could’ve affected home court bias over time. I ran a bivariate regression that considered the Season along with whether or not a team was playing at home as my explanatory variables. For both wins and points, this confounder had no effect on the “home vs. away” coefficient; playing at home made teams win and score more points at the exact same rates as in the univariate regression, even considering the season a game was played. After ruling out these potential confounders — although there may be more that I am missing — I believe that the coefficients that I found represent a causal effect. 
 
+# Conclusion
 
+I found support for my hypotheses that home teams in the NBA (from 2003-2019) won more games and scored more points than visiting teams.According to my analysis, from 2003-2019 in the NBA, teams won about 19% more and scored about 3 more points on average when they played at home. One limit to my analysis was its limited time scope between 2003 and 2019. In the future, I would like to follow up this project with more historical analyses, post-COVID analysis (especially in a few years when there is more data), and analysis of the NBA Bubble during the pandemic. Looking at pandemic games would present analytical challenges (which is why I avoided it in this project), but also the opportunity to analyze games held under a wider variety of conditions than normal (i.e., with and without crowds). 
 
+Other than season and playoff, which I ruled out, I could not come up with any other potential confounding variables. However, I could be overlooking a key confounding variable, which is another potential limitation of my analysis and threat to inference. All of the other factors at play that I brainstormed were not truly confounders, but rather contributors to the home court advantage. For example, as I mentioned in the introduction, visiting teams may be more tired from travel or unforgiving scheduling. I believe that these types of factors that are directly tied to playing at home, even if impactful, would not disprove my argument that teams do better when they play at home. Instead, they represent causes of the advantage and areas for further research. Quantifying the home court advantage is the first step; the next step is asking why it exists (and potentially how it can be minimized). Researchers have made progressive on these questions, but they are still contested and merit further inquiry (Moskowitz & Wertheim, 2012, p. 116-167).
 
+# Sources
 
+Scorecasting by Tobias Moskowitz and Jon Wertheim, 2012
 
-
-
+“NBA games data,” Nathan Lauga, Kaggle: https://www.kaggle.com/datasets/nathanlauga/nba-games
